<resources>
    <string name="app_name">Unimage Photo Viewer</string>
    <string name="explore_photo">Explore photo</string>
    <string name="description">Description</string>
    <string name="alt_description">Alt Description</string>

    <string name="view_in_web">View in Web</string>
    <string name="full_size">Full Size</string>
    <string name="download">Download</string>

    <string name="published_date">Published Date</string>
    <string name="image_resolution">Image Resolution</string>
    <string name="exif">EXIF</string>

    <string name="profile_image">Profile image</string>
    <string name="photo">Photo</string>

    <string name="account_full_name">Full name</string>
    <string name="account_username">Username</string>

    <string name="username_format">%1$s (@%2$s)</string>
    <string name="username_avatar_format">%1$s (@%2$s)\'s avatar</string>
    <string name="image_size_format">%1$d x %2$d pixels</string>
    <string name="image_size_full_format">%1$d x %2$d pixels (%3$s)</string>
    <string name="user_avatar_description">Profile image for %1$s</string>

    <string name="error_occurred">An error occurred!</string>
    <string name="no_photos">No photos</string>
    <string name="search_and_explore_photos"><![CDATA[Search & explore photos]]></string>

    <string name="exif_brand">Brand</string>
    <string name="exif_model">Model</string>
    <string name="exif_exposure_time">Exposure Time</string>
    <string name="exif_aperture">Aperture</string>
    <string name="exif_focal_length">Focal Length</string>
    <string name="exif_iso">ISO</string>

    <plurals name="total_photos_format">
        <item quantity="one">%1$d photo</item>
        <item quantity="other">%1$d photos</item>
    </plurals>
    <plurals name="following_format">
        <item quantity="one">%1$d following</item>
        <item quantity="other">%1$d following</item>
    </plurals>
    <plurals name="followers_format">
        <item quantity="one">%1$d follower</item>
        <item quantity="other">%1$d followers</item>
    </plurals>
</resources>
